--- a/ApplicationSimilateur/pom.xml
+++ b/ApplicationSimilateur/pom.xml
@@ -12,6 +12,12 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+	<dependency>
+			<groupId>commons-digester</groupId>
+			<artifactId>commons-digester</artifactId>
+			<version>2.1</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
